# pyclide

./: .gitignore  README.md  pyclide.py  pyproject.toml  pytest.ini
.claude/: CLAUDE.md  settings.local.json
.claude-plugin/: plugin.json
docs/: PYCLIDE_SERVER_PLAN.md
pyclide_server/: __init__.py  __main__.py  file_watcher.py  health.py  jedi_helpers.py  models.py  rope_engine.py  server.py  utils.py
scripts/: pyclide-wrapper.bat  pyclide-wrapper.sh
skills/pyclide/: REFERENCE.md  SKILL.md  pyclide_client.py
tests/: CLAUDE.md  README.md  __init__.py  conftest.py  test_cli_commands.py  test_codemod.py  test_edge_cases.py  test_feature_contracts.py  test_feature_real_world.py  test_feature_regression.py  test_feature_workflows.py  test_final_coverage.py  test_integration.py  test_jedi_advanced.py  test_jedi_features.py  test_json_output.py  test_missing_coverage.py  test_modern_python.py  test_rope_advanced.py  test_rope_features.py  test_utilities.py  utils.py
tests/client/: test_http_client.py  test_local_commands.py  test_port_management.py  test_registry.py  test_server_management.py
tests/e2e/: __init__.py  test_client_server_integration.py
tests/fixtures/: complex_imports.py  invalid_syntax.py  nested_classes.py  sample_module.py  sample_usage.py
tests/integration/: test_additional_coverage.py  test_api_contracts.py  test_cache_invalidation.py  test_diff_format_api.py  test_edge_cases.py  test_infrastructure_e2e.py  test_jedi_advanced.py  test_jedi_features.py  test_legacy_integration.py  test_lifecycle.py  test_modern_python.py  test_real_world.py  (+5 more)
(+14 files in other folders)
